Updated db parameters, implemented automated migration, added some checks for data input (through InputValidation class), added UI for authorization and registration.

--- a/SMSSendingApp1/SMSSendingApp1.csproj
+++ b/SMSSendingApp1/SMSSendingApp1.csproj
@@ -50,7 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleUserInterface.cs" />
+    <Compile Include="InputValidation.cs" />
     <Compile Include="Message.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipient.cs" />
