--- a/SMSSendingApp1/SMSSendingApp1.csproj
+++ b/SMSSendingApp1/SMSSendingApp1.csproj
@@ -52,18 +52,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger\BinaryMessageLogger.cs" />
-    <Compile Include="ConsoleMessageSender.cs" />
-    <Compile Include="ConsoleUserInterface.cs" />
+    <Compile Include="Sender\ConsoleMessageSender.cs" />
+    <Compile Include="ConsoleUI\ConsoleUserInterface.cs" />
     <Compile Include="Logger\IMessageLogger.cs" />
-    <Compile Include="InputValidation.cs" />
+    <Compile Include="ConsoleUI\InputValidation.cs" />
     <Compile Include="Logger\JsonMessageLogger.cs" />
     <Compile Include="Message.cs" />
-    <Compile Include="IMessageSender.cs" />
+    <Compile Include="Sender\IMessageSender.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipient.cs" />
-    <Compile Include="SMSSender.cs" />
     <Compile Include="User.cs" />
     <Compile Include="SMSContext.cs" />
     <Compile Include="Logger\XmlMessageLogger.cs" />
