--- a/SMSSendingApp1/SMSSendingApp1.csproj
+++ b/SMSSendingApp1/SMSSendingApp1.csproj
@@ -49,13 +49,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Logger\BinaryMessageLogger.cs" />
     <Compile Include="Sender\ConsoleMessageSender.cs" />
     <Compile Include="ConsoleUI\ConsoleUserInterface.cs" />
     <Compile Include="Logger\IMessageLogger.cs" />
-    <Compile Include="ConsoleUI\InputValidation.cs" />
+    <Compile Include="ConsoleUI\ConsoleInputValidation.cs" />
     <Compile Include="Logger\JsonMessageLogger.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Sender\IMessageSender.cs" />
